--- a/main.css
+++ b/main.css
@@ -5,12 +5,36 @@
 body {
   height: 100vh;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
-  flex-direction: column;
+  flex-direction: row;
   margin: 0;
 }
-
+.gameboard {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.scoreboard {
+  height: 300px;
+  width: 300px;
+  border: 1px solid violet;
+  background-color: darkblue;
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.score {
+  color: hotpink;
+  font-size: 40px;
+  font-weight: bold;
+  font-family: VT323;
+  text-align: center;
+}
+#highScore {
+  color: #e25822;
+}
 .grid {
   display: flex;
   flex-direction: row;
@@ -22,8 +46,22 @@ body {
   background-color: black;
   border-radius: 10px;
 }
+.modal {
+  z-index: 1;
+  height: 100px;
+  width: 700px;
+  display: none;
+  background-color: hotpink;
+  border: ridge 3px black;
+  position: fixed;
+  margin: 0 auto;
+  text-align: center;
+  font-family: VT323;
+  font-size: 70px;
+  color: black;
+}
 .cell {
-  border: 1px solid violet;
+  /* border: 1px solid violet; */
   font-size: 10px;
   background-color: black;
   border-radius: 10px;
@@ -31,9 +69,41 @@ body {
 .wall {
   background-color: blueviolet;
   color: white;
-  border-radius: 10px;
+  /* border-radius: 10px; */
 }
 .pacman {
-  background-image: url("pacman.png");
+  background-image: url("pacman.gif");
   background-size: contain;
+  background-color: black;
+  transform: rotate(0deg);
+}
+
+.sanctum {
+  background-color: darkblue;
+}
+.jewel {
+  background-image: url("jewel.png");
+  background-repeat: no-repeat;
+  background-size: 50%, 50%;
+  background-position: center;
+}
+.ghost1 {
+  background-image: url("ghost1.png");
+  background-size: contain;
+  background-color: black;
+}
+.ghost2 {
+  background-image: url("ghost2.png");
+  background-size: contain;
+  background-color: black;
+}
+.ghost3 {
+  background-image: url("ghost3.png");
+  background-size: contain;
+  background-color: black;
+}
+.ghost4 {
+  background-image: url("ghost4.png");
+  background-size: contain;
+  background-color: black;
 }
