--- a/main.css
+++ b/main.css
@@ -24,6 +24,15 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  align-items: center;
+}
+button {
+  width: 50%;
+  text-align: center;
+  font-weight: bold;
+  font-family: VT323;
+  font-size: 40px;
+  border: solid 10px #e25822;
 }
 .score {
   color: hotpink;
@@ -59,6 +68,9 @@ body {
   font-family: VT323;
   font-size: 70px;
   color: black;
+}
+#modID {
+  display: inline-block;
 }
 .cell {
   /* border: 1px solid violet; */
