--- a/main.css
+++ b/main.css
@@ -121,7 +121,7 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 50px;
+  /* margin: 50px; */
 
 }
 .grid {
