--- a/main.css
+++ b/main.css
@@ -198,9 +198,9 @@ button {
   /* background-color: hotpink; */
 }
 .pacmanClose {
-  background-color: rgba(230, 183, 240, 0.8);
-  filter: brightness(100%);
-  animation: pulse2 2s infinite;
+  /* background-color: rgba(230, 183, 240, 0.8);
+  filter: brightness(100%); */
+  animation: pacmanCloseColour 2s infinite;
 }
 
 
@@ -262,7 +262,7 @@ footer{
     background-color: #e25822;
   }
 }
-@keyframes pulse2 {
+@keyframes pacmanCloseColour {
   0%, 100% {
     background-color: midnightblue;
   }
